--- a/src/index.css
+++ b/src/index.css
@@ -73,24 +73,24 @@ header {
 }
 
 .container {
-  width: 800px;
+  max-width: 800px;
+  width: 100%;
   margin: 0 auto;
 }
 
-.search {
-}
-
 .search form {
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   margin: 50px auto 15px;
 }
 
-.search div {
+.search form div {
   position: relative;
 }
 
 .search input {
-  width: 500px;
+  max-width: 500px;
+  width: 100%;
   height: 47px;
   border: 2px solid #a5a5a5;
   border-radius: 5px;
@@ -160,4 +160,70 @@ header {
 .pagination-arrow-last {
   background: url('./images/navigation_last_icon.svg') center center no-repeat;
   background-size: 22px 22px;
+}
+
+.loading {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, .6);
+}
+
+.loader {
+  position: absolute;
+  top: calc(50% - 50px);
+  left: calc(50% - 50px);
+  z-index: 2;
+  width: 50px;
+  height: 50px;
+  background: url('./images/loader.gif') no-repeat;
+  background-size: contain;
+}
+
+.lds-ring {
+  position: absolute;
+  top: calc(50% - 50px);
+  left: calc(50% - 50px);
+  display: inline-block;
+  position: relative;
+  width: 64px;
+  height: 64px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 51px;
+  height: 51px;
+  margin: 6px;
+  border: 6px solid #4d4d4d;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #4d4d4d transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media(max-width: 800px) {
+  .container {
+    padding: 0 15px;
+  }
 }
