--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,12 @@ header {
   position: relative;
 }
 
-.search input {
+.search-input div {
+  max-width: 500px;
+  width: 100%;
+}
+
+.search-input input {
   max-width: 500px;
   width: 100%;
   height: 47px;
