--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,7 @@ header {
 .pagination {
   display: flex;
   justify-content: space-between;
-  max-width: 380px;
+  max-width: 500px;
   width: 100%;
   margin: 60px auto;
 }
@@ -142,27 +142,39 @@ header {
   border: 0;
 }
 
-.pagination-arrow {
+.pagination li a {
+  display: block;
   width: 35px;
   height: 35px;
+  font-size: 0;
 }
 
-.pagination-arrow-first {
+.pagination li a {
+  background: url('./images/navigation_dot.svg') center center no-repeat;
+  background-size: 22px 22px;
+}
+
+.pagination li.active a {
+  background: url('./images/navigation_dot_active.svg') center center no-repeat;
+  background-size: 22px 22px;
+}
+
+.pagination li:first-of-type a {
   background: url('./images/navigation_first_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
-.pagination-arrow-previous {
+.pagination li:nth-of-type(2) a {
   background: url('./images/navigation_previous_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
-.pagination-arrow-next {
+.pagination li:nth-last-of-type(2) a {
   background: url('./images/navigation_next_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
-.pagination-arrow-last {
+.pagination li:last-of-type a {
   background: url('./images/navigation_last_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
@@ -230,5 +242,18 @@ header {
 @media(max-width: 800px) {
   .container {
     padding: 0 15px;
+  }
+}
+
+@media(max-width: 767px) {
+  .pagination li a {
+    display: none;
+  }
+
+  .pagination li:first-of-type a,
+  .pagination li:nth-of-type(2) a,
+  .pagination li:nth-last-of-type(2) a,
+  .pagination li:last-of-type a {
+    display: block;
   }
 }
