--- a/src/index.css
+++ b/src/index.css
@@ -59,9 +59,6 @@ h1 {
 header {
   position: relative;
   top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100px;
   margin-bottom: 40px;
@@ -70,6 +67,21 @@ header {
   -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
   box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
+}
+
+header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+header a:first-of-type img {
+  width: 140px;
+}
+
+header a:last-of-type img {
+  width: 120px;
 }
 
 .container {
