--- a/public/style.css
+++ b/public/style.css
@@ -62,7 +62,7 @@ header {
   width: 100%;
   height: 100px;
   margin-bottom: 40px;
-  background: url('./images/pattern.jpg');
+  background: url('images/pattern.jpg');
   background-size: contain;
   -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.5);
@@ -121,7 +121,7 @@ header a:last-of-type img {
   top: 1px;
   width: 45px;
   height: 45px;
-  background: #4d4d4d url('./images/search_icon.svg') center center no-repeat;
+  background: #4d4d4d url('images/search_icon.svg') center center no-repeat;
   border: 0;
   border-radius: 5px;
 }
@@ -166,32 +166,32 @@ header a:last-of-type img {
 }
 
 .pagination li a {
-  background: url('./images/navigation_dot.svg') center center no-repeat;
+  background: url('images/navigation_dot.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
 .pagination li.active a {
-  background: url('./images/navigation_dot_active.svg') center center no-repeat;
+  background: url('images/navigation_dot_active.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
 .pagination li:first-of-type a {
-  background: url('./images/navigation_first_icon.svg') center center no-repeat;
+  background: url('images/navigation_first_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
 .pagination li:nth-of-type(2) a {
-  background: url('./images/navigation_previous_icon.svg') center center no-repeat;
+  background: url('images/navigation_previous_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
 .pagination li:nth-last-of-type(2) a {
-  background: url('./images/navigation_next_icon.svg') center center no-repeat;
+  background: url('images/navigation_next_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
 .pagination li:last-of-type a {
-  background: url('./images/navigation_last_icon.svg') center center no-repeat;
+  background: url('images/navigation_last_icon.svg') center center no-repeat;
   background-size: 22px 22px;
 }
 
@@ -212,7 +212,7 @@ header a:last-of-type img {
   z-index: 2;
   width: 50px;
   height: 50px;
-  background: url('./images/loader.gif') no-repeat;
+  background: url('images/loader.gif') no-repeat;
   background-size: contain;
 }
 
